--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,110 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    background-color: rgb(14, 14, 70);
+    font-family:cursive;
+}
+
+h3{
+    margin: 10px;
+}
+.encabezado{
+    margin: 10px;
+    color: aliceblue;
+    width: 100%;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#titulos{
+    width: 100%;
+    display: flex;
+    background-color: blueviolet;
+    border-radius: 10px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#titulos p{
+    padding: 5px;
+    border-radius: 5px;
+    border: 2px black solid;
+}
+
+#titulos p:hover{
+    padding: 5px;
+    background-color: rgb(31, 31, 114);
+    border-radius: 10px;
+    transition: .5s;
+    cursor: pointer;
+}
+
+
+
+#icono{
+    width: 113px;
+    height: 94px;
+    margin-right: auto;
+    margin-left: 20px;
+}
+
+.cuerpo{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.contenedor{
+    width: 90%;
+    background-color: rgb(89, 46, 129);
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.juego1,.juego2,.juego3{
+    margin: 10px 0px;
+    width: 300px;
+    height: 450px;
+    background-color: black;
+    border: 3px gray solid;
+    text-align: center;
+    font-size: 1rem;
+    color: aliceblue;
+
+}
+.imagen{
+    width: 292px;
+    height: 226px;
+}
+
+.juego1 button,.juego2 button,.juego3 button{
+    cursor: pointer;
+    width: 60px;
+    height: 30px;
+    background-color: rgb(89, 46, 129);
+    border-style: none;
+    margin: 5px;
+}
+
+.juego1 button:hover,.juego2 button:hover,.juego3 button:hover{
+    border-radius: 10px;
+    background-color: aliceblue;
+    transition: .5s;
+}
+
+@media(max-width: 600px){
+    #titulos{
+        display: flex;
+        flex-direction: column;
+    }
+
+
+
 }
